--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+	font-size: 16px;
 	margin: 0 auto;
 	width: 100%;
 	font-family: Helvetica, sans-serif;
@@ -23,7 +24,7 @@ html {
 
 h1 {
 	font-style: italic;
-	font-size: 9vw;
+	font-size: 10vw;
 	text-align: center;
 	margin: 0px;
 }
@@ -69,15 +70,12 @@ h1 {
 
 @media (max-aspect-ratio: 1/1) {
 
-	body {
-		font-size: 16px;
-	}
-
 	.navbar {
-		font-size: 24px;
+		white-space: nowrap;
+		font-size: 18px;
 		background-color: #000132;
 		width: 100%;
-		height: 73px;
+		height: auto;
 		overflow: hidden;
   		position: relative;
 	}
@@ -112,11 +110,9 @@ h1 {
 
 @media (min-aspect-ratio: 1/1) {
 
-	body {
-		font-size: 16px;
-	}
-
 	.navbar {
+		white-space: nowrap;
+		font-size: 18px;
 		background-color: #000132;
 		overflow: hidden;
 		display: flex;
