--- a/style.css
+++ b/style.css
@@ -38,13 +38,6 @@ h1 {
 	width: 100%;
 }
 
-.right {
-	float: right;
-	width: 50%;
-	margin-left: 20px;
-	margin-bottom: 10px;
-}
-
 .text {
 	margin-left: 15%;
 	margin-right: 15%;
@@ -106,6 +99,22 @@ h1 {
 		height: 52px;
 	}
 
+	.right {
+		display: block;
+  		margin-left: auto;
+  		margin-right: auto;
+		width: 80%;
+		margin-top: 20px;
+	}
+
+	.left {
+		display: block;
+  		margin-left: auto;
+  		margin-right: auto;
+		width: 80%;
+		margin-top: 20px;
+	}
+
 }
 
 @media (min-aspect-ratio: 1/1) {
@@ -141,4 +150,17 @@ h1 {
 	  display: none;
 	}
 
+	.right {
+		float: right;
+		width: 50%;
+		margin-left: 20px;
+		margin-bottom: 10px;
+	}
+
+	.left {
+		float: left;
+		width: 50%;
+		margin-right: 20px;
+		margin-bottom: 10px;
+	}
 }
