--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 	margin: 0 auto;
 	width: 100%;
 	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
 	color: #0a0203;
 	background-color: #f8f8ff;
 	overflow-x: hidden;
@@ -23,6 +24,7 @@ html {
 }
 
 h1 {
+	font-weight: 600;
 	font-style: italic;
 	font-size: 10vw;
 	text-align: center;
@@ -72,7 +74,7 @@ h1 {
 
 	.navbar a {
 		color: #f8f8ff;
-		padding: 14px 16px;
+		padding: 18px 18px;
 		text-decoration: none;
 		display: block;
 	}
@@ -98,7 +100,7 @@ h1 {
 
 	#hpf-logo {
 		display: block;
-		left: 0;
+		left: 10px;
 		top: 0;
 		position: absolute;
 		padding: 0px;
@@ -152,6 +154,10 @@ h1 {
 		padding: 0px;
 		text-decoration: none;
 		height: 54px;
+	}
+
+	#hpf-logo {
+		padding-left: 10px;
 	}
 
 	.navbar a.icon {
