--- a/style.css
+++ b/style.css
@@ -114,7 +114,8 @@ h1 {
   		margin-left: auto;
   		margin-right: auto;
 		width: 80%;
-		margin-top: 20px;
+		margin-top: 30px;
+		margin-bottom: 30px;
 	}
 
 	.left {
@@ -122,7 +123,8 @@ h1 {
   		margin-left: auto;
   		margin-right: auto;
 		width: 80%;
-		margin-top: 20px;
+		margin-top: 30px;
+		margin-bottom: 30px;
 	}
 
 }
