--- a/style.css
+++ b/style.css
@@ -114,8 +114,9 @@ h1 {
   		margin-left: auto;
   		margin-right: auto;
 		width: 90%;
-		margin-top: 30px;
-		margin-bottom: 30px;
+		margin-top: 40px;
+		margin-bottom: 40px;
+		box-shadow: 10px 10px #ffc32b;
 	}
 
 	.left {
@@ -123,8 +124,10 @@ h1 {
   		margin-left: auto;
   		margin-right: auto;
 		width: 90%;
-		margin-top: 30px;
-		margin-bottom: 30px;
+		margin-top: 40px;
+		margin-bottom: 40px;
+		box-shadow: 10px 10px #1f69b6;
+
 	}
 
 }
@@ -169,14 +172,14 @@ h1 {
 	.right {
 		float: right;
 		width: 50%;
-		margin-left: 20px;
-		margin-bottom: 10px;
+		margin: 10px 0px 30px 40px;
+		box-shadow: 10px 10px #ffc32b;
 	}
 
 	.left {
 		float: left;
 		width: 50%;
-		margin-right: 20px;
-		margin-bottom: 10px;
+		margin: 10px 40px 30px 0px;
+		box-shadow: -10px 10px #1f69b6;
 	}
 }
